--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-visually-hidden": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.17.3",
+    "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "jotai": "^2.10.3",
     "lucide-react": "^0.462.0",
