--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "convex": "^1.17.3",
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.0",
     "jotai": "^2.10.3",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
